# arc-training

./: .gitignore  .ignore  404.qmd  README  README.md  _publish.yml  _quarto.yml  about.qmd  calendar.qmd  contact.qmd  explora.qmd  index.qmd  login.qmd  netlify.toml  newsletter.qmd  requirements.txt  revealjs.scss  revealjs_sfu.scss  revealjsbest.scss  revealjsblue.scss  revealjsdhsi.scss  revealjsdrac.scss  revealjsemacs.scss  revealjsgreen.scss  revealjsjax.scss  revealjsmarimo.scss  revealjsmlflow.scss  revealjspdpl.scss  revealjspink.scss  revealjspolars.scss  revealjsrainbow.scss  revealjsserif.scss  revealjssfu.scss  revealjsyellow.scss  sitemap.xml  slides_to_content.sh  styles.css  styles_dark.css  theme.scss  theme_dark.scss  (+4 more)
_site/: 404.html  about.html  calendar.html  contact.html  explora.html  index.html  login.html  newsletter.html  robots.txt  search.json  sitemap.xml  styles.css  wiki.html
ai/: fl.bib  fl_dataset.qmd  fl_jaxdl.qmd  fl_state.qmd  gpu_intro.qmd  index.qmd  jx_ad.qmd  jx_benchmark.qmd  jx_ecosystem.qmd  jx_install.qmd  jx_jit.qmd  jx_jobs.qmd  jx_map.qmd  jx_nn.qmd  jx_numpy.qmd  jx_pallas.qmd  jx_parallel.qmd  jx_pytree.qmd  jx_why.qmd  pt_autograd.qmd  pt_concepts.qmd  pt_intro_slides.qmd  pt_nn.qmd  pt_nn_slides.qmd  pt_tensors.qmd  pt_training.qmd  revealjs.scss  sk_intro.qmd  sk_workflow.qmd  top_fl.qmd  top_jx.qmd  (+28 more)
ai/fl/: fl.bib  fl_checkpoint.qmd  fl_cnn.qmd  fl_data.qmd  fl_finetune.qmd  fl_hyperparameters.qmd  fl_install.qmd  fl_jax.qmd  fl_jax_content.qmd  fl_jax_slides.qmd  fl_jaxdl.qmd  fl_load_weights.qmd  fl_model.qmd  fl_nn.qmd  fl_numpy.qmd  fl_optimization.qmd  fl_preprocess.qmd  fl_resources.qmd  fl_run.qmd  fl_scale.qmd  fl_state.qmd  fl_training.qmd  pyproject.toml
ai/jxai/: 1_metadata.py  2_dataset.py  3_preprocessing.py  4_augmentation.py  5_dataloader.py  eval_metrics.pkl  fl.bib  fl_checkpoint.qmd  fl_cnn.qmd  fl_data.qmd  fl_finetune.qmd  fl_hyperparameters.qmd  fl_install.qmd  fl_jax.qmd  fl_jax_content.qmd  fl_jax_slides.qmd  fl_jaxdl.qmd  fl_linen.qmd  fl_load_weights.qmd  fl_model.qmd  fl_nn.qmd  fl_numpy.qmd  fl_preprocess.qmd  fl_resources.qmd  fl_run.qmd  fl_scale.qmd  fl_state.qmd  fl_training.qmd  jxai.bib  jxai.py  jxai_augmentation.qmd  jxai_data.qmd  jxai_dataloader.qmd  jxai_datapreprocess.qmd  jxai_dataset.qmd  jxai_ex.qmd  jxai_getdata.qmd  jxai_inference.qmd  jxai_install.qmd  jxai_jaxstack.qmd  (+15 more)
python/: basics.qmd  collections.qmd  control_flow.qmd  cudf_basics.qmd  cudf_ecosystem.qmd  cudf_install.qmd  cudf_setup.qmd  cupy_basics.qmd  cupy_concepts.qmd  cupy_intro.qmd  cupy_kernels.qmd  cupy_kernels_basics.qmd  cupy_kernels_jit.qmd  cupy_kernels_raw.qmd  cupy_setup.qmd  cupy_workflow.qmd  functions.qmd  gpu_clusters.qmd  gpu_concepts.qmd  gpu_cuda.qmd  gpu_cudf.qmd  gpu_cupy.qmd  gpu_intro.qmd  gpu_polars.qmd  hpc_gpu.qmd  hpc_jax.qmd  hpc_polars.qmd  index.qmd  intro_basics.qmd  intro_collections.qmd  intro_control_flow.qmd  intro_df.qmd  intro_doc.qmd  intro_functions.qmd  intro_hpc.qmd  intro_intro.qmd  intro_matplotlib.qmd  intro_numpy.qmd  intro_objects.qmd  intro_oop.qmd  (+76 more)
python/data/: pratchett.txt
(+1842 files in other folders)
