[project]
name = "python"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.0.0",
    "bokeh>=3.8.2",
    "bokeh-sampledata>=2025.0",
    "cudf-cu13==25.12.*",
    "matplotlib>=3.10.8",
    "plotly>=6.5.2",
    "plotnine>=0.15.3",
    "pymupdf>=1.26.7",
    "seaborn>=0.13.2",
    "textblob>=0.19.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "jupyter-cache>=1.0.1",
    "ptpython>=3.0.32",
]
