[project]
name = "fl"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.4.1",
    "jax-ai-stack[tfds]>=2025.10.28",
    "jax[cuda13]>=0.8.0",
    "matplotlib>=3.10.7",
    "penzai>=0.2.5",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "jupyter-cache>=1.0.1",
    "ptpython>=3.0.32",
]
