[project]
name = "jxai"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.5.0",
    "ipython>=9.0.2",
    "jax-ai-stack[grain]>=2025.2.5",
    "jax[cuda12]>=0.5.0",
    "jupyter>=1.1.1",
    "jupyter-cache>=1.0.1",
    "matplotlib>=3.10.1",
    "penzai>=0.2.4",
    "ptpython>=3.0.29",
    "tiktoken>=0.9.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "transformers>=4.50.3",
]
