[project]
name = "jxai"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "dm-pix>=0.4.4",
    "imageio>=2.37.2",
    "jax-ai-stack>=2025.10.28",
    "jax[cuda]>=0.8.0",
    "matplotlib>=3.10.7",
    "polars>=1.35.2",
    "scikit-image>=0.25.2",
    "tqdm>=4.67.1",
    "transformers==4.57.3",
]

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
    "jupyter>=1.1.1",
    "jupyter-cache>=1.0.1",
    "mcp>=1.22.0",
    "ptpython>=3.0.32",
    "ruff>=0.14.6",
]
